# aicecream

./: .prettierrc  bun.lockb  components.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: content.tsx  footer.tsx  menu.tsx  sidebar.tsx  splash.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  scroll-area.tsx  slider.tsx  textarea.tsx
src/contexts/: chat-context.tsx  language-model-context.tsx
src/lib/: base64ToBlobUrl.ts  textToAudio.ts  uint8arrayToBase64.ts
src/types/: answer.ts  chat.ts
