[package]
name = "aicecream"
version = "0.0.0"
description = "A Tauri App"
authors = ["Snarloff"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.13"
futures = "0.3"
ollama-rs = { version = "0.2.0", features = ["stream"] }
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
